--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <!-- Meta Tag SEO -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruangriung - Under Construction</title>
+    <meta name="description" content="Ruangriung sedang dalam pengembangan! Kami sedang menyiapkan website keren dengan fitur-fitur menarik. Pantau terus perkembangannya!">
+    <meta name="keywords" content="Ruangriung, Under Construction, Website Development, Fitur Menarik, Countdown">
+    <meta name="author" content="Ruangriung Team">
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Ruangriung - Under Construction">
+    <meta property="og:description" content="Ruangriung sedang dalam pengembangan! Kami sedang menyiapkan website keren dengan fitur-fitur menarik. Pantau terus perkembangannya!">
+    <meta property="og:image" content="https://ruangriung.my.id/logo-light.png"> <!-- Ganti dengan URL gambar logo Anda -->
+    <meta property="og:url" content="https://RuangRiung.my.id"> <!-- Ganti dengan URL website Anda -->
+    <meta property="og:type" content="website">
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ruangriung - Under Construction">
+    <meta name="twitter:description" content="Ruangriung sedang dalam pengembangan! Kami sedang menyiapkan website keren dengan fitur-fitur menarik. Pantau terus perkembangannya!">
+    <meta name="twitter:image" content="https://ruangriung.my
+    id/logo-light.png"> <!-- Ganti dengan URL gambar logo Anda -->
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome 6.7.2 -->
@@ -33,12 +48,29 @@
             height: auto; /* Tinggi menyesuaikan */
             margin-bottom: 30px; /* Jarak antara logo dan konten */
         }
-        .description {
-            font-size: 1.2rem;
-            margin-bottom: 30px;
-            max-width: 600px;
+        /* Card untuk Deskripsi */
+        .card {
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+            margin-bottom: 20px;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        .card-body {
+            padding: 20px;
+        }
+        .card-title {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+        .card-text {
+            font-size: 1rem;
             line-height: 1.6;
-            text-align: center;
         }
         .countdown {
             font-size: 2.5rem;
@@ -54,10 +86,24 @@
             color: #ffffff;
             border: none;
             transition: background-color 0.3s, color 0.3s;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            /* Tambahkan margin-top untuk memberikan jarak */
         }
         .dark-mode #toggleDarkMode {
             background-color: #ffc107;
             color: #000000;
+        }
+        /* Gaya tombol Gabung Group */
+        #joinGroupButton {
+            background-color: #1877f2; /* Warna biru Facebook */
+            color: #ffffff;
+            border: none;
+            transition: background-color 0.3s, color 0.3s;
+            margin-top: 10px; /* Jarak dari elemen di atasnya */
+        }
+        #joinGroupButton:hover {
+            background-color: #166fe5; /* Warna biru Facebook yang lebih gelap saat hover */
         }
         /* Konten utama */
         .container {
@@ -79,57 +125,250 @@
             background-color: #1a1a1a; /* Warna latar belakang footer di dark mode */
             color: #ffffff;
         }
+        .footer-credits, .footer-design {
+            margin: 5px 0;
+            font-size: 0.9rem;
+            color: #666666;
+        }
+        .dark-mode .footer-credits, .dark-mode .footer-design {
+            color: #aaaaaa;
+        }
+        .footer-credits a, .footer-design a {
+            color: #007bff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .footer-credits a:hover, .footer-design a:hover {
+            color: #0056b3;
+        }
+        .footer-credits i {
+            margin-right: 5px;
+        }
+        /* Loading Screen */
+        #loadingScreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            z-index: 1000;
+            transition: opacity 0.5s ease-in-out;
+            padding: 20px; /* Tambahkan padding untuk memberikan jarak dari tepi layar */
+        }
+        .dark-mode #loadingScreen {
+            background-color: #121212;
+        }
+        /* Spinner Berdenyut */
+        .pulse-spinner {
+            width: 60px;
+            height: 60px;
+            background-color: #007bff;
+            border-radius: 50%;
+            animation: pulse 1.5s infinite;
+            margin-bottom: 20px; /* Jarak antara spinner dan teks loading */
+        }
+        @keyframes pulse {
+            0% { transform: scale(0.8); opacity: 0.7; }
+            50% { transform: scale(1); opacity: 1; }
+            100% { transform: scale(0.8); opacity: 0.7; }
+        }
+        /* Teks Loading dengan Typewriter Effect */
+        .loading-text {
+            margin-top: 20px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: #000000;
+            overflow: hidden; /* Sembunyikan teks yang belum diketik */
+            border-right: 2px solid #000000; /* Kursor berkedip */
+            white-space: pre-wrap; /* Teks bisa pindah baris */
+            letter-spacing: 0.15em; /* Jarak antar huruf */
+            text-align: center; /* Teks di tengah */
+            width: 90%; /* Lebar teks disesuaikan */
+            max-width: 600px; /* Maksimum lebar teks */
+            margin: 0 auto; /* Posisi teks di tengah */
+            word-wrap: break-word; /* Memastikan teks tidak melebihi lebar container */
+        }
+        .dark-mode .loading-text {
+            color: #ffffff;
+            border-right-color: #ffffff; /* Warna kursor di dark mode */
+        }
+        /* Progress Bar */
+        .progress-bar-container {
+            width: 100%;
+            max-width: 300px; /* Lebar maksimum progress bar */
+            height: 10px;
+            background-color: #e0e0e0;
+            border-radius: 5px;
+            margin-top: 20px; /* Jarak antara teks loading dan progress bar */
+            overflow: hidden;
+        }
+        .dark-mode .progress-bar-container {
+            background-color: #333333;
+        }
+        .progress-bar {
+            height: 100%;
+            width: 0;
+            background-color: #007bff;
+            border-radius: 5px;
+            transition: width 0.1s linear;
+        }
+        .progress-text {
+            margin-top: 10px;
+            font-size: 0.9rem;
+            color: #000000;
+        }
+        .dark-mode .progress-text {
+            color: #ffffff;
+        }
     </style>
 </head>
 <body>
+    <!-- Loading Screen -->
+    <div id="loadingScreen">
+        <div class="pulse-spinner"></div>
+        <!-- Teks Loading dengan Typewriter Effect -->
+        <div class="loading-text" id="loadingText"></div>
+        <!-- Progress Bar -->
+        <div class="progress-bar-container">
+            <div class="progress-bar" id="loadingProgressBar"></div>
+        </div>
+        <div class="progress-text" id="loadingProgressText">0%</div>
+    </div>
+
     <div class="container text-center">
         <!-- Logo sebagai Header Banner -->
         <img src="logo-light.png" alt="Logo Ruangriung" class="logo-banner" id="logo">
 
-        <!-- Deskripsi -->
-        <div class="description">
-            <p>
-                Selamat datang di <strong>Ruangriung</strong>! Kami sedang bekerja keras untuk menyiapkan website kami agar dapat memberikan pengalaman terbaik untuk Anda. 
-                Website ini akan segera hadir dengan fitur-fitur menarik yang dirancang khusus untuk memenuhi kebutuhan Anda.
-            </p>
-            <p>
-                Silakan pantau terus perkembangan kami. Terima kasih atas kesabaran dan dukungannya!
-            </p>
-        </div>
-
-        <!-- Countdown -->
-        <div class="countdown" id="countdown"></div>
-
-        <!-- Toggle Dark Mode -->
+        <!-- Card untuk Deskripsi -->
+        <div class="card">
+            <div class="card-body">
+            		
+            	<!-- Toggle Dark Mode -->
         <button class="btn" id="toggleDarkMode">
             <i class="fas fa-moon" id="darkModeIcon"></i>
             <i class="fas fa-sun d-none" id="lightModeIcon"></i>
             <span class="toggle-dark-mode-text" id="toggleDarkModeText">Dark Mode</span>
         </button>
+                <h5 class="card-title">RuangRiung AI Image</h5>
+                <p class="card-text">
+                   Team <strong>RUANGRIUNG</strong> lagi sibuk nih buat nyiapin sesuatu yang keren buat konten kreator seperti kalian! 🚀 Kami lagi ngoding <i class="fas fa-code"></i>, desain, dan nyiapin fitur-fitur yang bakal bikin kamu betah nongkrong di sini.
+                </p>
+                <p class="card-text">
+                    Jadi, sabar ya! Tungguin terus perkembangannya. Jangan lupa pantengin terus, karena bakal ada kejutan seru yang nggak boleh kamu lewatin! 😎
+                </p>
+            </div>
+        </div>
+
+        <!-- Tombol Gabung Group -->
+        <a href="https://www.facebook.com/groups/1182261482811767/?ref=share&mibextid=lOuIew" target="_blank" class="btn" id="joinGroupButton">
+            <i class="fab fa-facebook"></i> Gabung Group
+        </a>
+
+        <!-- Countdown -->
+        <div class="countdown" id="countdown"></div>
+
+        <!-- Progress Bar untuk Countdown -->
+        <div class="progress-bar-container">
+            <div class="progress-bar" id="countdownProgressBar"></div>
+        </div>
+        <div class="progress-text" id="countdownProgressText">100%</div>
+
+        <!-- Teks Pengerjaan -->
+        <div class="progress-info" id="progressInfo">
+            Proses pengerjaan masih berjalan... Sabar ya, karena yang keren juga butuh waktu! 😉
+        </div>
+
+
     </div>
 
     <!-- Footer -->
     <footer>
         <p>&copy; <span id="dynamicYear"></span> Ruangriung. All rights reserved.</p>
+        <p class="footer-credits">
+            Powered by: 
+            <a href="https://getbootstrap.com/" target="_blank"><i class="fab fa-bootstrap"></i> Bootstrap</a>, 
+            <a href="https://jquery.com/" target="_blank"><i class="fab fa-js"></i> jQuery</a>, 
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i> GitHub</a>, 
+            <a href="https://www.cloudflare.com/" target="_blank"><i class="fas fa-cloud"></i> Cloudflare</a>, 
+            <a href="https://fontawesome.com/" target="_blank"><i class="fab fa-font-awesome"></i> FontAwesome</a>.
+        </p>
+        <p class="footer-design">
+            Didesain oleh <a href="https://ariftirtana.com" target="_blank">ArifTirtana.com</a>.
+        </p>
     </footer>
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script>
+        // Loading Screen
+        const loadingScreen = document.getElementById('loadingScreen');
+        const loadingText = document.getElementById('loadingText');
+        const loadingProgressBar = document.getElementById('loadingProgressBar');
+        const loadingProgressText = document.getElementById('loadingProgressText');
+
+        // Teks yang akan ditampilkan dengan efek mengetik
+        const text = "Mohon tunggu ya, halaman Ruangriung sedang dimuat...";
+        let index = 0;
+
+        // Fungsi untuk mengetik teks
+        const typeText = () => {
+            if (index < text.length) {
+                loadingText.textContent += text.charAt(index);
+                index++;
+                setTimeout(typeText, 100); // Kecepatan mengetik (ms)
+            }
+        };
+
+        // Mulai efek mengetik
+        typeText();
+
+        let progress = 0;
+        const duration = 7000; // Durasi loading screen (7 detik)
+        const intervalTime = 50; // Interval update progress bar (ms)
+        const increment = (intervalTime / duration) * 100; // Persentase peningkatan per interval
+
+        // Fungsi untuk mengupdate progress bar
+        const updateProgress = () => {
+            progress += increment;
+            if (progress > 100) progress = 100; // Pastikan tidak melebihi 100%
+            loadingProgressBar.style.width = `${progress}%`;
+            loadingProgressText.textContent = `${Math.round(progress)}%`;
+
+            if (progress < 100) {
+                setTimeout(updateProgress, intervalTime); // Lanjutkan update
+            } else {
+                // Sembunyikan loading screen setelah selesai
+                loadingScreen.style.opacity = '0'; // Efek fade-out
+                setTimeout(() => {
+                    loadingScreen.style.display = 'none'; // Sembunyikan elemen setelah fade-out
+                }, 500); // Durasi fade-out
+            }
+        };
+
+        // Mulai progress bar
+        setTimeout(updateProgress, intervalTime);
+
         // Countdown
         const countdownDate = new Date("March 31, 2025 00:00:00").getTime();
+        const startDate = new Date("January 1, 2025 00:00:00").getTime(); // Tanggal awal countdown
 
         const updateCountdown = () => {
             const now = new Date().getTime();
             const distance = countdownDate - now;
 
+            // Hitung hari, jam, menit, dan detik
             const days = Math.floor(distance / (1000 * 60 * 60 * 24));
             const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
             const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            // Format teks dalam bahasa Indonesia
+            // Tampilkan countdown
             document.getElementById("countdown").innerHTML = `
                 ${days} <small>hari</small> 
                 ${hours} <small>jam</small> 
@@ -137,9 +376,22 @@
                 ${seconds} <small>detik</small>
             `;
 
+            // Hitung persentase waktu yang tersisa
+            const totalTime = countdownDate - startDate; // Total waktu dari awal hingga akhir
+            const remainingTime = distance; // Waktu yang tersisa
+            const percentage = (remainingTime / totalTime) * 100; // Persentase waktu yang tersisa
+
+            // Update progress bar dan teks persentase
+            document.getElementById("countdownProgressBar").style.width = `${percentage}%`;
+            document.getElementById("countdownProgressText").textContent = `${Math.round(percentage)}%`;
+
+            // Jika countdown selesai
             if (distance < 0) {
                 clearInterval(countdownInterval);
                 document.getElementById("countdown").innerHTML = "Website Sudah Live!";
+                document.getElementById("countdownProgressBar").style.width = "0%";
+                document.getElementById("countdownProgressText").textContent = "0%";
+                document.getElementById("progressInfo").textContent = "Yeay! Website sudah live! 🎉";
             }
         };
 
