--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
         <!-- Tombol Gabung Group -->
         <a href="https://www.facebook.com/groups/1182261482811767/?ref=share&mibextid=lOuIew" target="_blank" class="btn" id="joinGroupButton">
-            <i class="fab fa-facebook"></i> Gabung Group
+            <i class="fab fa-facebook"></i> Kunjungi Group
         </a>
 
         <!-- Countdown -->
@@ -290,7 +290,7 @@
     <footer>
         <p>&copy; <span id="dynamicYear"></span> Ruangriung. All rights reserved.</p>
         <p class="footer-credits">
-            Powered by: 
+            dibuat dengan ♥️ | Powered by: 
             <a href="https://getbootstrap.com/" target="_blank"><i class="fab fa-bootstrap"></i> Bootstrap</a>, 
             <a href="https://jquery.com/" target="_blank"><i class="fab fa-js"></i> jQuery</a>, 
             <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i> GitHub</a>, 
