--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <meta name="twitter:description" content="Ruangriung sedang dalam pengembangan! Kami sedang menyiapkan website keren dengan fitur-fitur menarik. Pantau terus perkembangannya!">
     <meta name="twitter:image" content="https://ruangriung.my
     id/logo-light.png"> <!-- Ganti dengan URL gambar logo Anda -->
+    <title>RuangRiung | AI IMAGE</title>
+	<link rel="icon" type="image/png" href="logo.png">
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome 6.7.2 -->
