--- a/index.html
+++ b/index.html
@@ -257,6 +257,32 @@
 .btn-download i {
     font-size: 1.2rem; /* Ukuran ikon */
 }
+
+/* Gaya untuk modal popup */
+.modal-content {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.modal-header {
+    border-bottom: none;
+    padding-bottom: 0;
+}
+
+.modal-footer {
+    border-top: none;
+    padding-top: 0;
+}
+
+.modal-title {
+    font-weight: bold;
+}
+
+.modal-body img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
     </style>
 </head>
 <body>
@@ -325,6 +351,25 @@
     <a href="https://apps.apple.com/app/id123456789" target="_blank" class="btn btn-download">
         <i class="fab fa-apple"></i> Download di App Store
     </a>
+</div>
+
+<!-- Modal Popup -->
+<div class="modal fade" id="ruangriungModal" tabindex="-1" aria-labelledby="ruangriungModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ruangriungModalLabel">Selamat Datang di Ruangriung! </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center">
+                <img src="ruangriung.png" alt="Ruangriung" class="img-fluid">
+                <p class="mt-3">Terima kasih telah mengunjungi Ruangriung. Kami sedang menyiapkan sesuatu yang istimewa untuk Anda! stay tuned ♥️</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+            </div>
+        </div>
+    </div>
 </div>
 
     <!-- Footer -->
@@ -463,6 +508,13 @@
                 logo.src = "logo-light.png"; // Ganti dengan logo light mode
             }
         });
+        
+        // Tampilkan modal popup 7 detik setelah halaman selesai dimuat
+setTimeout(() => {
+    const modal = new bootstrap.Modal(document.getElementById('ruangriungModal'));
+    modal.show();
+}, 11000);
+
     </script>
 </body>
 </html>
