--- a/random-spinner.html
+++ b/random-spinner.html
@@ -339,7 +339,7 @@
     <script> 
         // Audio untuk efek suara
         const spinSound = new Audio('spin-sound.wav');
-        const resultSound = new Audio('result-sound.mp3');
+        const resultSound = new Audio('result-sound.wav');
 
         // History hasil
         const historyList = document.getElementById('historyList');
