--- a/random-spinner.html
+++ b/random-spinner.html
@@ -294,12 +294,14 @@
     </style>
 </head>
 <body>
-    <!-- Logo Ruangriung di luar form -->
-    <div class="logo">
-        <img id="logoImage" src="logo-light.png" alt="Ruangriung Logo">
-        <!-- Tombol Dark Mode di bawah logo -->
-        <button id="themeToggle">Toggle Dark Mode</button>
-    </div>
+   <!-- Logo Ruangriung di luar form dengan link ke home -->
+<div class="logo">
+    <a href="https://www.ruangriung.my.id" target="_blank">
+        <img id="logoImage" src="logo-light.png" alt="Ruangriung Logo - Random Spinner">
+    </a>
+    <!-- Tombol Dark Mode di bawah logo -->
+    <button id="themeToggle">Toggle Dark Mode</button>
+</div>
 
     <!-- Form Random Spinner -->
     <div class="container">
