--- a/random-spinner.html
+++ b/random-spinner.html
@@ -296,7 +296,7 @@
 <body>
    <!-- Logo Ruangriung di luar form dengan link ke home -->
 <div class="logo">
-    <a href="https://www.ruangriung.my.id" target="_blank">
+    <a href="https://ruangriung.my.id" target="_blank">
         <img id="logoImage" src="logo-light.png" alt="Ruangriung Logo - Random Spinner">
     </a>
     <!-- Tombol Dark Mode di bawah logo -->
