--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:description" content="Transform text into beautiful AI-generated artwork in various styles including photography, anime, digital painting and more.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://ruangriung.my.id">
-<meta property="og:image" content="assets/logo.png">
+<meta property="og:image" content="assets/logo.webp">
     <title>RuangRiung AI Image Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
