--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="RuangRiung AI Image Generator - Create Stunning Digital Art">
 <meta property="og:description" content="Transform text into beautiful AI-generated artwork in various styles including photography, anime, digital painting and more.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://arif.ruangriung.my.id">
+<meta property="og:url" content="https://ruangriung.my.id">
 <meta property="og:image" content="assets/logo.webp">
     <title>RuangRiung AI Image Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
