--- a/index.html
+++ b/index.html
@@ -1375,7 +1375,7 @@
     </div>
     
     <footer>
-        &copy; <span id="current-year"></span> AI Image Generator. All rights reserved. powered by <a href="https://pollinations.ai" target="_blank">Pollinations.ai</a> Develop with ♥️ by<a href="https://ariftirtana.my.id" target="_blank">Arif Tirtana</a>
+        &copy; <span id="current-year"></span> RuangRiung AI Image Generator. All rights reserved | powered by <a href="https://pollinations.ai" target="_blank">Pollinations.ai</a> | Develop with ♥️ by<a href="https://ariftirtana.my.id" target="_blank">Arif Tirtana</a>
     </footer>
     
     <script>
