--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://ruangriung.my.id">
 <meta property="og:image" content="assets/logo.webp">
+    <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
     <title>RuangRiung AI Image Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
