--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
                     <div class="select-container">
                         <i class="fas fa-microchip"></i>
                         <select id="model">
-                            <option value="pollinations">Pollinations AI (FLUX Turbo)</option>
+                            <option value="pollinations">FLUX Turbo</option>
                             <option value="dall-e-3">DALL-E 3 (Requires API Key)</option>
                             <option value="stability-ai">Stability.AI (Requires API Key)</option>
                         </select>
