--- a/index.html
+++ b/index.html
@@ -1552,7 +1552,7 @@ footer {
     Develop with ♥️ by <a href="https://ariftirtana.my.id" target="_blank" class="footer-link">Arif Tirtana</a> | Thanks to <i class="fab fa-github"></i><a href="https://github.com" target="_blank" class="footer-link"> GitHub</a> &  <a href="https://www.cloudflare.com/" target="_blank" class="footer-link">Cloudflare</a> <i class="fas fa-cloud"></i>
 <button id="reset-all-btn" class="footer-reset-btn"><i class="fas fa-trash"></i> Reset All Settings</button>
 </footer>
-<a href="https://www.facebook.com/ruangriung" target="_blank" class="floating-facebook-btn" title="Follow us on Facebook">
+<a href="https://www.facebook.com/groups/1182261482811767/?ref=share&mibextid=lOuIew" target="_blank" class="floating-facebook-btn" title="Follow us on Facebook">
     <i class="fab fa-facebook-f"></i>
 </a>
     <i class="fab fa-facebook-f"></i>
